feature: Remote Container Smart Return System (FIFO Elimination + Exchange Protocol + Local Cache Simulation + Persistence)
Core Functions:
- RemoteExchangePayload: Handles item retrieval and return simultaneously in a single packet, with atomic execution of return before retrieval.
- ContainerReturnTracker: Tracks each item retrieval (pos, itemId, pass), eliminating items by round.
- Local Cache Simulation: recordTake/recordReturn updates the cache in real time, avoiding repeated scanning.
- ContainerCachePersister: Automatically saves upon exiting the world/automatically reads from the JSON cache upon entering.

Fixes:
- computeMaxAddable only counts the main inventory (36 slots, previously including equipment slots).
- giveToPlayer reports the actual amount of items added + fallback drop.
- invalidate instead of fabricating slot numbers when recordReturn merged=false.
- Block PrintHandler during exchange to prevent accidentally placing the wrong block.
- exchangeCooldown prevents ping-pong fall.

Cleanup:
- Delete old GetItemFromInventory/PutBack*. 6 files (merged into exchange)
- Delete unused methods getSlotCount/markSlotUsed/peek/poll
- Delete all debug logs
- Delete all cache in 2 seconds